<resources>
    <string name="app_name">Donacion de Sangre</string>
    <string name="action_settings">Opciones</string>
    <string name="name_esp">Nombre</string>
    <string name="birthdate_esp">Fecha de nacimiento</string>
    <string name="form_esp">Formulario</string>
    <string name="button_save">Guardar</string>
    <string name="last_name1_esp">Apellido Paterno</string>
    <string name="last_name2_esp">Apellido Materno</string>
    <string name="date_donated">Ultima donacion hecha</string>
    <string name="date_next_donation">Puedo donar hasta</string>
    <string name="button_donated">Donar</string>

    <string-array name="bloodType_array">
        <item>O-</item>
        <item>O+</item>
        <item>B-</item>
        <item>B+</item>
        <item>A-</item>
        <item>A+</item>
        <item>AB-</item>
        <item>AB+</item>
    </string-array>

    <string-array name="sex_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

</resources>
